add popular words